# rpclib

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
example/: File.h  basic_client_server.cpp  ssl_file_transfer_client.cpp  ssl_file_transfer_server.cpp
example/certs/: certificate.crt  privateKey.key
include/rpc/: client.h  common.h  node.h  node.hpp  rpc_impl.cpp  server.h  service_provider.h
src/: node.cpp
